infra/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-restrict
  namespace: backend
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: auth
    - podSelector:
        matchLabels:
          app: user
    - podSelector:
        matchLabels:
          app: facility
    - podSelector:
        matchLabels:
          app: request
    - podSelector:
        matchLabels:
          app: routing
    - podSelector:
        matchLabels:
          app: metrics
